<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textUnit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUnit1" />

    <TextView
        android:id="@+id/textUnit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoxInput" />

    <TextView
        android:id="@+id/textUnit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUnit2" />

    <ImageButton
        android:id="@+id/buttonMeasure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:adjustViewBounds="true"
        android:background="#7C4DFF"
        android:contentDescription="@string/measure"
        android:onClick="measureClick"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTemperature"
        app:layout_constraintEnd_toStartOf="@+id/buttonTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTemperature"
        app:srcCompat="@drawable/measure"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/buttonTemperature"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="28dp"
        android:adjustViewBounds="true"
        android:background="#7C4DFF"
        android:contentDescription="@string/temperature"
        android:onClick="temperatureClick"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonWeight"
        app:layout_constraintStart_toEndOf="@+id/buttonMeasure"
        app:srcCompat="@drawable/thermometer"
        tools:ignore="UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/buttonWeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="#7C4DFF"
        android:contentDescription="@string/weight"
        android:onClick="weightClick"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTemperature"
        app:layout_constraintTop_toTopOf="@+id/buttonTemperature"
        app:srcCompat="@drawable/weight"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/textBoxInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/inputDefault"
        app:layout_constraintBottom_toBottomOf="@+id/unitSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/unitSpinner"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,labelFor" />

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/unitspinnerbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:textColor="#5D3438"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textUnit1"
        app:layout_constraintTop_toBottomOf="@+id/textBoxInput" />

    <TextView
        android:id="@+id/textResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:textColor="#5D3438"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textUnit2"
        app:layout_constraintTop_toBottomOf="@+id/textResult1" />

    <TextView
        android:id="@+id/textResult3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:textColor="#5D3438"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textUnit3"
        app:layout_constraintTop_toBottomOf="@+id/textResult2" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:textAlignment="center"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/buttonTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>